# routes/dogs.js
@@ -6,36 +6,51 @@ const auth = require('../controllers/auth')
 const can = require('../permissions/dogs')
 const { dogValidation } = require('../controllers/validation');
 
-const router = Router({ prefix: '/api/v1/dogs' })
+const router = Router({prefix: '/api/v1/dogs'})
 
 const getAll = async (ctx) => {
-  const result = await model.getAll()
-  if (result.length) {
-    ctx.body = result
+  try{
+    const result = await model.getAll()
+    if (result.length) {
+      ctx.status = 200
+      ctx.body = result
+    }
+  } catch (error) {
+    console.log(error)
+    ctx.status = 400
   }
 }
 
 const getById = async (ctx) => {
   const id = ctx.params.id
-  const result = await model.getByID(id)
-  if (result.length) {
-    ctx.body = result[0]
-  }
+  try{
+    const result = await model.getByID(id)
+    if (!result.length) {
+      ctx.status = 404
+      return
+    }
+    ctx.status = 200
+    ctx.body = result[0]  
+    } catch (error) {
+      console.log(error)
+      ctx.status = 400
+    }
 }
 
 const createDog = async (ctx) => {
-  const permission = can.updateDog(ctx.state.user)
+  const permission = can.createDog(ctx.state.user)
   if (!permission.granted) {
-    console.log(`Request user: ${ctx.state.user.username} , id: ${ctx.state.user.id} is not authorized to create`)
     ctx.status = 403
-    ctx.body = { message: 'You have no permission to create' }
-  } else {
-    const body = ctx.request.body
-    const result = await model.createDog(body)
-    if (result.length) {
+    return
+  } 
+  try {
+      const body = ctx.request.body
+      const result = await model.createDog(body)
+      ctx.status = 201
       ctx.body = result[0]
-      console.log('Create dog detail successfully')
-    }
+  } catch (error){
+    console.log(error)
+    ctx.status = 400
   }
 }
 
@@ -43,33 +58,42 @@ const updateDog = async (ctx) => {
   const id = ctx.params.id
   const permission = can.updateDog(ctx.state.user)
   if (!permission.granted) {
-    console.log(`Request user: ${ctx.state.user.username} , id: ${ctx.state.user.id} is not authorized to update dog information`)
     ctx.status = 403
-  } else {
+    return
+  } 
+  try {
     const body = ctx.request.body
     const result = await model.updateDog(id, body)
-    if (result.length) {
-      ctx.body = result[0]
-      console.log('Update dog detail successfully')
-    } 
+    ctx.status = 200
+    ctx.body = result[0]
+    } catch (error) {
+    console.log(error)
+    ctx.status = 400
+    }
+  }
+
+const deleteDog = async (ctx) => {
+  const permission = can.deleteDog(ctx.state.user)
+  if (!permission.granted) {
+    ctx.status = 403
+    return
+  } 
+  try {
+    const id = ctx.params.id
+    const dogID = await model.getByID(id)
+    if (!dogID.length) {
+      ctx.status = 404
+      return
+    }
+    const result = await model.deleteDog(id)
+    console.log(result)
+    ctx.status = 204
+  } catch (error) {
+    console.log(error)
+    ctx.status = 400
   }
 }
 
-const deleteDog = async (ctx) => {
-  console.log('Processing deleteDog Route')
-  const permission = can.deleteDog(ctx.state.user)
-  if (!permission.granted) {
-    console.log(`Request user: ${ctx.state.user.username} , id: ${ctx.state.user.id} is not authorized to delete any dog information`)
-    ctx.status = 403
-  } else {
-    const id = ctx.params.id
-    const result = await model.deleteDog(id)
-    if (result) {
-      ctx.status = result.status
-      ctx.body = { id: parseInt(id) }
-    }
-  }
-}
 
 router.get('/', getAll)
 router.get('/:id([0-9]{1,})', getById)
